--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-property-grid",
+  "name": "PTO-Tracker",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -13,21 +13,23 @@
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.12",
     "babel-preset-react": "^6.0.15",
+    "history": "^1.17.0",
     "jsx-loader": "^0.13.2",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
+    "react-router": "^1.0.3",
     "webpack": "^1.12.9"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/scarow/react-boilerplate.git"
+    "url": "git+https://github.com/scarow/pto-tracker-client.git"
   },
   "author": "Samantha Carow",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/scarow/react-boilerplate/issues"
+    "url": "https://github.com/scarow/pto-tracker-client/issues"
   },
-  "homepage": "https://github.com/scarow/react-boilerplate#readme",
+  "homepage": "https://github.com/scarow/pto-tracker-client#readme",
   "devDependencies": {
     "http-server": "~0.7.1",
     "webpack-dev-server": "^1.14.0"
